# rs-dirents2arrow-ipc-stream

./: Cargo.toml  README.md  build.sh  dirents2arrow-ipc-stream  example.sh
src/: lib.rs
